# Problems

./: .gitignore  README.md
CSES/: CMakeLists.txt  Problems.xlsx  info.txt
CSES/src/: CMakeLists.txt  main.cpp
CSES/src/DynamicProgramming/: BookShop.cpp  CoinCombinationsI.cpp  CoinCombinationsII.cpp  DiceCombinations.cpp  GridPaths.cpp  IncreasingSubsequence.cpp  MinimizingCoins.cpp  MoneySums.cpp  Projects.cpp  RectangleCutting.cpp  RemovalGame.cpp  RemovingDigits.cpp  TwoSetsII.cpp
CSES/src/IntroductoryProblems/: TwoSets.cpp
CSES/src/SortingAndSearching/: Apartments.cpp  CollectingNumbers.cpp  FactoryMachines.cpp  FerrisWheel.cpp  MaximumSubarraySum.cpp  MaximumSubarraySumII.cpp  MissingCoinSum.cpp  MovieFestival.cpp  MovieFestivalII.cpp  NearestSmallerValues.cpp  NestedRangesCheck.cpp  NestedRangesCount.cpp  Playlist.cpp  ReadingBooks.cpp  RoomAllocation.cpp  SlidingWindowCost.cpp  SlidingWindowMedian.cpp  StickLengths.cpp  SubarrayDistinctValues.cpp  SubarrayDivisibility.cpp  SubarraySumsII.cpp  TasksAndDeadlines.cpp  TrafficLights.cpp
HackerRank/: CMakeLists.txt
HackerRank/Solved/Algorithms/Graph Theory/: BreadthFirstSearchShortestReachVova.cpp
HackerRank/Solved/Algorithms/GraphTheory/: BreadthFirstSearchShortestReach.cpp  JourneyToTheMoon.cpp
HackerRank/Solved/Algorithms/Implementation/: NonDivisibleSubset.cpp
HackerRank/Solved/Algorithms/Search/: CutTheTree.cpp  CutTheTreeVova.cpp  HackerlandRadioTransmitters.cpp  MinimumLoss.cpp  Pairs.cpp
HackerRank/Solved/Algorithms/Sorting/: FraudulentActivityNotifications.cpp  InsertionSortAdvancedAnalysis.cpp  InsertionSortAdvancedAnalysisVova.cpp  LilysHomework.cpp
HackerRank/Solved/DataStructures/Trees/: IsThisABinarySearchTree.cpp  LowestCommonAncestor.cpp
HackerRank/Solved/_templates/: trees.cpp
HackerRank/src/: CMakeLists.txt  FraudulentActivityNotifications.cpp  HackerlandRadioTransmitters.cpp  InsertionSortAdvancedAnalysis.cpp  _template.cpp  main.cpp
HackerRank/src/Algorithms/Search/: CountLuck.cpp  Pairs.cpp
HackerRank/src/Algorithms/Strings/: CommonChild.cpp  SherlockAndTheValidString.cpp
McDowell/: CMakeLists.txt
McDowell/src/: CMakeLists.txt  _template.cpp  main.cpp
McDowell/src/2_LinkedLists/: 7_intersection.cpp  8_LoopDetection.cpp
Others/: CMakeLists.txt
Others/src/: CMakeLists.txt  Maxim_MapWithUniqueValues.cpp  Maxim_TwoStrings.cpp  main.cpp
Serg/Viruses/: problem.txt
Serg/VirusesOnLine/: CMakeLists.txt  problem.txt
Serg/VirusesOnLine/src/: main.cpp
Utils/: common_utils.h  demo_print_utils.cpp  print_utils.h  random_utils.h
(+3 files in other folders)
