
add_executable(main
  main.cpp
  IntroductoryProblems/TwoSets.cpp
  
  #SortingAndSearching
  SortingAndSearching/Apartments.cpp
  SortingAndSearching/FerrisWheel.cpp
  SortingAndSearching/MovieFestival.cpp
  SortingAndSearching/MaximumSubarraySum.cpp
  SortingAndSearching/StickLengths.cpp
  SortingAndSearching/MissingCoinSum.cpp
  SortingAndSearching/CollectingNumbers.cpp
  SortingAndSearching/Playlist.cpp
  SortingAndSearching/TrafficLights.cpp
  SortingAndSearching/NestedRangesCheck.cpp
  SortingAndSearching/NestedRangesCount.cpp
  SortingAndSearching/RoomAllocation.cpp
  SortingAndSearching/FactoryMachines.cpp
  SortingAndSearching/TasksAndDeadlines.cpp
  SortingAndSearching/ReadingBooks.cpp
  SortingAndSearching/NearestSmallerValues.cpp
  SortingAndSearching/SubarraySumsII.cpp
  SortingAndSearching/SubarrayDivisibility.cpp
  SortingAndSearching/SubarrayDistinctValues.cpp
  SortingAndSearching/SlidingWindowMedian.cpp
  SortingAndSearching/SlidingWindowCost.cpp
  SortingAndSearching/MovieFestivalII.cpp
  SortingAndSearching/MaximumSubarraySumII.cpp

  #Dynamic Programming
  DynamicProgramming/DiceCombinations.cpp
  DynamicProgramming/MinimizingCoins.cpp
  DynamicProgramming/CoinCombinationsI.cpp
  DynamicProgramming/CoinCombinationsII.cpp
  DynamicProgramming/RemovingDigits.cpp
  DynamicProgramming/GridPaths.cpp
  DynamicProgramming/BookShop.cpp
  DynamicProgramming/RectangleCutting.cpp
  DynamicProgramming/MoneySums.cpp
  DynamicProgramming/RemovalGame.cpp
  DynamicProgramming/TwoSetsII.cpp
  DynamicProgramming/IncreasingSubsequence.cpp
  DynamicProgramming/Projects.cpp

)


